Add instructions below embedded apps on each page

--- a/modifier.html
+++ b/modifier.html
@@ -41,8 +41,16 @@
                 <!-- Page content-->
                 <div class="container-fluid mx-auto">
                     <h1 class="mt-4 mx-5 my-2">Modifier</h1>
+      <p class="my-3 mx-5">You can find instructions on how to back up your database at the bottom of this page.</p>
+      <p class="my-3 mx-5">You&#8217;ll need your username and password to use the Modifier Tool. If you don&#8217;t have access to the tool, please contact Boxplot at barb@boxplotanalytics.com.</p>
                     <div id="container" class="container-fluid" style="height: 800px; width: 100%;"></div>
                 </div>
+    <div class="mt-4 mx-5 my-2">
+      <h2>How to Back Up Your Database</h2>
+          <ol><li>Click the Back Up Data button on your Retool app. Doing so will create a CSV file (similar to an Excel file -- you’ll be able to view the resulting file in Excel) with all data in the inventory table. <strong>Once it gets large enough, the CSV will not be able to be opened in Excel</strong> and should just be stored in SharePoint or another Cloud Storage system in case restoration is needed.</li>
+            <li>Save the file that was just created onto your computer. Save it somewhere where you will remember where it is.</li>
+            <li>It may make sense to indicate the date somewhere in the name of the file that you’re saving so you have a record of when the backed up data is accurate as of.</li></ol>
+
             </div>
         </div>
         <!-- Bootstrap core JS-->
