Update web copy on index.html

--- a/index.html
+++ b/index.html
@@ -41,19 +41,11 @@
                 <div class="container-fluid mx-auto">
                     <h1 class="mt-4 mx-5 my-2">Data Management for Amazon Services</h1>
                     <p class="my-3 mx-5">
-                    Adrenal helps companies sell on Amazon. Boxplot understands that Adrenal has large quantities of data relating to these services it provides to its clients. Particularly, many NIS sheets and other datasets primarily in .csv/Excel format. Having the files in this format makes it extremely time consuming and difficult to find particular records or update information. Adrenal is seeking a solution to streamline finding, filtering, and managing the hundreds of thousands of products they oversee.
-                    </p>
-                    <p class="my-3 mx-5">
-                    We are recommending a web-based interface as the final deliverable. This is how Adrenal employees will interact with the data and the database. Web-based interfaces can be used from any browser, on any device, anywhere in the world. Employees will visit a simple website that will contain the following pages:
-
-                    </p>
-                    <li class="mx-5 my-3"><strong>Viewer</strong> - This will be an embedded dashboard to be used for finding, filtering, & viewing data. This would look similar to the PDF provided by InsightLeap and could have as many pages as needed for various filtering tasks. Including a page for revenue numbers.</li>
-                    <li class="mx-5 my-3"><strong>Modifier</strong> - A page that allows the Adrenal employee to find and modify a single record in the database.
-</li>
-                    <li class="mx-5 my-3"><strong>Uploader</strong> - A form where the Adrenal Employee may upload a completed template .csv file for bulk insertion into the database (or bulk modification of the database).
-</li>
-                    <li class="mx-5 my-3"><strong>Exporter</strong> (optional) - This page would allow Adrenal employees to export data to Excel, PDF, etc. as needed. This is not included in the price breakdown below, but could be added if desired.
-</li>
+            Use this website to interact with the Adrenal database. Navigate to the appropriate page using the sidebar (click the <em>Toggle Menu</em> button to open). Here is an overview of what each page does: </p>
+                    <li class="mx-5 my-3"><strong>Viewer</strong> - An embedded dashboard used for finding, filtering, & viewing data.</li>
+                    <li class="mx-5 my-3"><strong>Modifier</strong> - An embedded application used for finding modifying a single record in the database. </li>
+                    <li class="mx-5 my-3"><strong>Uploader</strong> - An embedded application used for uploading a strictly formatted CSV file for bulk insertion to (or bulk modification of) the database. </li>
+          <li class="mx-5 my-3"><strong>Exporter</strong> - A tool for exporting data to Excel, PDF, etc. as needed.</li>
                 </div>
             </div>
         </div>
