Add exporter tool

--- a/uploader.html
+++ b/uploader.html
@@ -23,6 +23,7 @@
       <a class="list-group-item list-group-item-action list-group-item-light p-3" href="modifier.html">Modifier</a>
       <a class="list-group-item list-group-item-action list-group-item-light p-3" href="uploader.html">Uploader</a>
       <a class="list-group-item list-group-item-action list-group-item-light p-3" href="viewer.html">Viewer</a>
+      <a class="list-group-item list-group-item-action list-group-item-light p-3" href="exporter.html">Exporter</a>
     </div>
   </div>
   <!-- Page content wrapper-->
@@ -42,7 +43,9 @@
     <!-- Page content-->
     <div class="container-fluid mx-auto">
       <h1 class="mt-4 mx-5 my-2">Uploader</h1>
+      <div class="alert alert-info" role="alert">
       <p class="my-3 mx-5">You can find instructions on how to use the Bulk Uploader tool at the bottom of this page.</p>
+          </div>
       <p class="my-3 mx-5">You&#8217;ll need your username and password to use the Uploader Tool. If you don&#8217;t have access to the tool, please contact Boxplot at barb@boxplotanalytics.com.</p>
       <div id="container" class="container-fluid" style="height: 800px; width: 100%;"></div>
     </div>
