--- a/viewer.html
+++ b/viewer.html
@@ -20,6 +20,7 @@
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="modifier.html">Modifier</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="uploader.html">Uploader</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="viewer.html">Viewer</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="exporter.html">Exporter</a>
                 </div>
             </div>
             <!-- Page content wrapper-->
