--- a/exporter.html
+++ b/exporter.html
@@ -10,7 +10,8 @@
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-        <link href="css/main.css" rel="stylesheet" />
+        <!-- External JS: Retool -->
+        <script src="https://cdn.tryretool.com/embed.js"> </script>
     </head>
     <body>
         <div class="d-flex" id="wrapper">
@@ -40,19 +41,27 @@
                 </nav>
                 <!-- Page content-->
                 <div class="container-fluid mx-auto">
-                    <h1 class="mt-4 mx-5 my-2">Data Management for Amazon Services</h1>
-                    <p class="my-3 mx-5">
-            Use this website to interact with the Adrenal database. Navigate to the appropriate page using the sidebar (click the <em>Toggle Menu</em> button to open). Here is an overview of what each page does: </p>
-                    <li class="mx-5 my-3"><strong>Viewer</strong> - An embedded dashboard used for finding, filtering, & viewing data.</li>
-                    <li class="mx-5 my-3"><strong>Modifier</strong> - An embedded application used for finding modifying a single record in the database. </li>
-                    <li class="mx-5 my-3"><strong>Uploader</strong> - An embedded application used for uploading a strictly formatted CSV file for bulk insertion to (or bulk modification of) the database. </li>
-          <li class="mx-5 my-3"><strong>Exporter</strong> - A tool for exporting data to Excel, PDF, etc. as needed.</li>
+                    <h1 class="mt-4 mx-5 my-2">Exporter</h1>
+      <p class="my-3 mx-5">You can find instructions on how to back up your database at the bottom of this page.</p>
+      <p class="my-3 mx-5">You&#8217;ll need your username and password to use the Exporter Tool. If you don&#8217;t have access to the tool, please contact Boxplot at barb@boxplotanalytics.com.</p>
+                    <div id="container" class="container-fluid" style="height: 800px; width: 100%;"></div>
                 </div>
+    <div class="mt-4 mx-5 my-2">
+      <h2>How to Back Up Your Database</h2>
+          <ol><li>Click the Back Up Data button on your Retool app. Doing so will create a CSV file (similar to an Excel file -- you’ll be able to view the resulting file in Excel) with all data in the inventory table. <strong>Once it gets large enough, the CSV will not be able to be opened in Excel</strong> and should just be stored in SharePoint or another Cloud Storage system in case restoration is needed.</li>
+            <li>Save the file that was just created onto your computer. Save it somewhere where you will remember where it is.</li>
+            <li>It may make sense to indicate the date somewhere in the name of the file that you’re saving so you have a record of when the backed up data is accurate as of.</li></ol>
+
             </div>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script>
+var rt = window.retool.RetoolDashboard(document.getElementById('container'), 'https://adrenalusa.retool.com/apps/Backup%20Database')
+</script>
     </body>
 </html>
+
+
