Embed Power BI in Viewer page

--- a/viewer.html
+++ b/viewer.html
@@ -18,7 +18,7 @@
                 <!-- Top navigation-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
   <div class="container">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="index.html">
       <img src="assets/Adrenal-Logo_Horiz-WhiteOrange.png" alt="adrenal" width="25%">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,8 @@
                 <!-- Page content-->
                 <div class="container-fluid mx-auto">
                     <h1 class="mt-4 mx-5 my-2">Viewer</h1>
-                    <p class="mx-5 my-2">Coming soon.</p>
+          <p class="mt-4 mx-5 my-2">Click the arrow in the bottom right-hand corner to view the dashboard in fullscreen.</p>
+                    <iframe width="100%" height="500px" src=https://app.powerbi.com/view?r=eyJrIjoiY2FjMjI1MDgtMzU3Yi00OTNkLThjYTQtZDlkMTAxZmZkMzc0IiwidCI6IjhhOGQxZGUyLTg3YjgtNDY3YS1hMTlmLTI0OTRkMjA1YjdhOCIsImMiOjJ9 frameborder="0" allowFullScreen="true"></iframe>
                 </div>
             </div>
         </div>
