--- a/index.html
+++ b/index.html
@@ -17,21 +17,9 @@
             <!-- Page content wrapper-->
             <div id="page-content-wrapper">
                 <!-- Top navigation-->
-                <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom"> -->
-                <!--     <div class="container-fluid"> -->
-                <!--         <button class="btn btn-primary" id="sidebarToggle">Menu</button> -->
-                <!--         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button> -->
-                <!--         <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
-                <!--             <ul class="navbar-nav ms-auto mt-2 mt-lg-0"> -->
-                <!-- <li><a class="navbar-brand" href="#"> <img src="assets/Adrenal-Logo_Icon-Orange.png" width="5%" height="5%" class="d-inline-block align-top" alt=""> Bootstrap </a></li> -->
-                <!--                 <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li> -->
-                <!--             </ul> -->
-                <!--         </div> -->
-                <!--     </div> -->
-                <!-- </nav> -->
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
   <div class="container">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="index.html">
       <img src="assets/Adrenal-Logo_Horiz-WhiteOrange.png" alt="adrenal" width="25%">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
