Update Viewer page

--- a/viewer.html
+++ b/viewer.html
@@ -47,9 +47,9 @@
                 <!-- Page content-->
                 <div class="container-fluid mx-auto">
                     <h1 class="mt-4 mx-5 my-2">Viewer</h1>
-          <p class="mt-4 mx-5 my-2">Click the arrow in the bottom right-hand corner to view the dashboard in fullscreen.</p>
-                    <iframe width="100%" height="500px" src=https://app.powerbi.com/view?r=eyJrIjoiY2FjMjI1MDgtMzU3Yi00OTNkLThjYTQtZDlkMTAxZmZkMzc0IiwidCI6IjhhOGQxZGUyLTg3YjgtNDY3YS1hMTlmLTI0OTRkMjA1YjdhOCIsImMiOjJ9 frameborder="0" allowFullScreen="true"></iframe>
+          <p class="mt-4 mx-5 my-2">Use the arrows at the bottom of the screen to navigate between dashboard pages.</p>
                 </div>
+                    <iframe width="100%" height="800px" src=https://app.powerbi.com/view?r=eyJrIjoiY2FjMjI1MDgtMzU3Yi00OTNkLThjYTQtZDlkMTAxZmZkMzc0IiwidCI6IjhhOGQxZGUyLTg3YjgtNDY3YS1hMTlmLTI0OTRkMjA1YjdhOCIsImMiOjJ9 frameborder="0" allowFullScreen="true"></iframe>
             </div>
         </div>
         <!-- Bootstrap core JS-->
